review remarks: check impacts
Signed-off-by: David BRAQUART <david.braquart@rte-france.com>